[project]
name = "AITracker_AITrackerDev"
version = "1.0.0"
authors = [
  { name="Jacob Hogrefe and Emilio Cruz" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Development Status :: 4 - Beta"
]

[project.urls]
Homepage = "https://github.com/AITrackerDev/AITracker"
Issues = "https://github.com/AITrackerDev/AITracker/issues"